register with eureka
